Q3 اضافة في ملفt Edit لحتى الحقول المطلوبة  يجي عليها Requirde

--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -43,6 +43,7 @@
 </div>
 
 
-@section Scripts {
- 
-}
+@section Scripts {Add commentMore actions}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
